# streamerTwitchJam

./: .gitignore  README.md  compose.yaml
.github/workflows/: build.yml
extension/: .gitignore  config.html  configJs.js  index.html  mobileIndex.html  requirements.txt  script.js  styles.css  videoIndex.html
githubPage/: EULA.html  privacyPolicy.html
proxy/: Cargo.toml
proxy/src/: main.rs
streamerApp/: README.md  exampleSecret.py  infoWindowDataConfig.json  main.py  movableWindowNames.json  obsConfig.json  requirements.txt  setupConfig.html  windowConfig.json
streamerAppConfig/: .gitignore  README.md  app.go  file_io.go  go.mod  go.sum  infoWindowDataConfig.json  main.go  obs.go  wails.json  windowConfig.json
streamerAppConfig/frontend/: README.md  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs
streamerAppConfig/frontend/src/: App.vue  main.ts
streamerAppConfig/frontend/src/components/: PreviewWindow.vue
streamerAppConfig/frontend/src/views/: HomeView.vue
streamerAppConfig/types/: files.go  frontend.go
streamerAppJs/: .gitignore  main.js  main.mjs  package-lock.json  package.json
streamerAppOBS/: package.json  tailwind.config.js
streamerAppOBS/src/components/: AllowList.vue  BoundaryTable.vue  SceneItemPopupEditor.vue  SceneItemTable.vue  TitleBar.vue
streamerAppOBS/src/composables/: useOBSWebSocket.ts  useProxyWebSocket.ts
streamerAppOBS/src/pages/: DashboardPage.vue  LoginPage.vue
streamerAppOBS/src/store/: appStore.ts  configStore.ts
streamerAppOBS/src/types/: index.ts
(+4 files in other folders)
